[package]
name = "chain-crypto"
version = "0.1.0"
authors = ["Crypto.com <chain@crypto.com>"]
edition = "2018"

[dependencies]
blake3 = "0.3"
parity-scale-codec = { version = "1.3", default-features = false }
once_cell = "1.4"

[dev-dependencies]
chain-crypto-derive = { path = "./derive" }
parity-scale-codec = { version = "1.3", features = ["derive"] }
