[package]
name = "client-rpsee"
version = "0.1.0"
authors = ["yihuang <yi.codeplayer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.2.0", features=["unstable"]}
jsonrpsee = { git="https://github.com/yihuang/jsonrpsee.git", rev="afb9f48affdfdec030eec6e8635d8c0d9544a167" }
jsonrpc-core = "14.0"
structopt = "0.3"

client-rpc = { path="../client-rpc" }
client-common = { path="../client-common" }
client-core = { path="../client-core" }
chain-core = { path="../chain-core" }
